--- a/app/globals.css
+++ b/app/globals.css
@@ -10,34 +10,19 @@
     @apply text-slate-800 dark:text-white;
   }
 
-  /* Custom scrollbar */
+  /* Hide all scrollbars by default but keep scroll functionality */
   ::-webkit-scrollbar {
-    width: 10px;
+    display: none; /* Chrome, Safari and Opera */
   }
 
-  ::-webkit-scrollbar-track {
-    background: rgb(241 245 249 / 0.8);
+  /* For IE and Edge */
+  * {
+    -ms-overflow-style: none;
   }
 
-  ::-webkit-scrollbar-thumb {
-    background: rgb(148 163 184 / 0.5);
-    border-radius: 5px;
-  }
-
-  ::-webkit-scrollbar-thumb:hover {
-    background: rgb(100 116 139 / 0.6);
-  }
-
-  .dark ::-webkit-scrollbar-track {
-    background: rgb(30 41 59 / 0.8);
-  }
-
-  .dark ::-webkit-scrollbar-thumb {
-    background: rgb(71 85 105 / 0.5);
-  }
-
-  .dark ::-webkit-scrollbar-thumb:hover {
-    background: rgb(100 116 139 / 0.6);
+  /* For Firefox */
+  * {
+    scrollbar-width: none;
   }
 }
 
